--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 															alert(consistencyErrorMessage);
 														}else{
 															points[i][1] = rank;
-															window.api.send("addRank", [ndays,rank]);
+															window.api.send("addRank", {"etab_id":etab_id,"point":[ndays,rank]});
 															let today = date.toLocaleDateString('en-CA');
 															let parts = today.split('-');
 															if (parseInt(mm_selected)<parseInt(parts[1])||
@@ -137,7 +137,7 @@
 												}
 											}
 											points.splice(i, 0, [ndays,rank]);
-											window.api.send("addRank", [ndays,rank]);
+											window.api.send("addRank", {"etab_id":etab_id,"point":[ndays,rank]});
 											let today = date.toLocaleDateString('en-CA');
 											let parts = today.split('-');
 											if (parseInt(mm_selected)<parseInt(parts[1])||
@@ -158,7 +158,7 @@
 												if (points[i][0] == ndays){
 													points.splice(i, 1);
 													document.getElementById("rank").value = "";
-													window.api.send("deletePoint", ndays);
+													window.api.send("deletePoint", {"etab_id":etab_id,"ndays":ndays});
 													updateCoeffs();
 													updateCanvas(-1,-1);
 													return;
