small UI improvement

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 							<div id="deletePanel" class="panel">
 								<div>
 									<div class="inlineBlockWrapper" >
-										<button id="deletePointButton" class="deleteButton" onclick="deletePointButtonClicked();"> Supprimer le point </button>
+										<button id="deletePointButton" class="enabledDeleteButton" onclick="deletePointButtonClicked();"> Supprimer le point </button>
 									</div>
 								</div>
 							</div>
