fix a bug with linear regression

--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
 				</li>
 			</ul>
 		</div>
-		<script type="text/javascript">
-			/*const electron = require('electron');
-			const ipcRenderer = electron.ipcRenderer;*/
-		</script>
+		<script type="text/javascript" src="showHtml.js"></script>
 		<script type="text/javascript" src="showEtabs.js"></script>
 		<footer>
 			<!-- TO COMPLETE -->
