--- a/showData.html
+++ b/showData.html
@@ -27,7 +27,7 @@
 			<div style="width: fit-content;">
 				<div id="predictionPanel" class="panel">
 					<div >
-						<span>prédiction : </span><span id="predictedValue">Work in progress</span>
+						<span>prédiction pour </span><span id="etabName">[Loading ...] : </span><span id="predictedValue">Données insuffisantes.</span>
 					</div>
 				</div>
 				<div id="subBlock1">
@@ -207,7 +207,7 @@
 								<div id="deletePanel" class="panel">
 									<div>
 										<div class="inlineBlockWrapper" onmouseenter="deletePointButtonEnterHovered();" onmouseleave="deletePointButtonExitHovered();">
-											<button id="deletePointButton" class="disabledDeleteButton" onclick="deletePointButtonClicked();"> Supprimer le point </button>
+											<button id="deletePointButton" class="disabledDeleteButton" onclick="deletePointButtonClicked();document.getElementById('rank').focus();"> Supprimer le point </button>
 										</div>
 									</div>
 								</div>
@@ -228,7 +228,7 @@
 		
 			</div>
 		</div>
-		
+		<script type="text/javascript" src="showHtml.js"></script>
 		<script type="text/javascript" src="modelprediction.js"></script>
 		<script type="text/javascript" src="values.js"></script>
 		<script type="text/javascript" src="plotgraph.js"></script>
