take screen size into account

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 						</div>
 					</li>
 					<li id="homePageLink" class="clickableMenu"><a href="index.html">Accueil</a></li>
-					<li ><div>Work in progress</div></li>
+					<li ><div>nothing</div></li>
 					<li id="rightMenu">
 						<div></div>
 						<div id="textOnTheRightInRightMenu">text on the right</div>
