--- a/showData.html
+++ b/showData.html
@@ -15,7 +15,7 @@
 						</div>
 					</li>
 					<li id="homePageLink" class="clickableMenu"><a href="index.html">Accueil</a></li>
-					<li ><div>Work in progress</div></li>
+					<li ><div>nothing</div></li>
 					<li id="rightMenu">
 						<div></div>
 						<div id="textOnTheRightInRightMenu">text on the right</div>
@@ -215,9 +215,9 @@
 							<div id="secondPanel" class="panel">
 								<div>
 									<div class="inlineBlockWrapper" >
-										<div><span>Rang du dernier admis : </span><span><input type="text" name="lastAdmitted" onkeypress="return isNumber(event)" maxlength="6" size="6"/></span></div>
+										<div><span>Rang du dernier admis : </span><span><input type="text" name="lastAdmitted" placeholder="Coming soon" onkeypress="return isNumber(event)" maxlength="6" size="6"/></span></div>
 										<br/>
-										<div><span>Capacité d'accueil : </span><span><input type="text" name="capacity"onkeypress="return isNumber(event)" maxlength="4" size="4"/></span></div>
+										<div><span>Capacité d'accueil : </span><span><input type="text" name="capacity"placeholder="Coming soon" onkeypress="return isNumber(event)" maxlength="6" size="6"/></span></div>
 									</div>
 								</div>
 							</div>
@@ -229,6 +229,7 @@
 			</div>
 		</div>
 		<script type="text/javascript" src="showHtml.js"></script>
+		<script type="text/javascript" src="adapttoscreen.js"></script>
 		<script type="text/javascript" src="modelprediction.js"></script>
 		<script type="text/javascript" src="values.js"></script>
 		<script type="text/javascript" src="plotgraph.js"></script>
