--- a/showData.html
+++ b/showData.html
@@ -23,6 +23,7 @@
 				</ul>
 			</nav>
 		</header>
+		<script type="text/javascript" src="accessstorage.js"></script>
 		<div id="container">
 			<div style="width: fit-content;">
 				<div id="predictionPanel" class="panel">
