--- a/showData.html
+++ b/showData.html
@@ -10,9 +10,9 @@
 		<header>
 			<nav id="menu">
 				<ul>
-					<li style="font-weight: 1000";>
+					<li >
 						<div>
-							<span style="color:#212cff;/*dark blue*/";>></span><span style="color:#40F0B0;/*light blue*/";>></span><span style="color:#212cff;/*dark blue*/";>></span>
+							<span style="color:#212cff;text-shadow: 0 -1px #212cff, 0 1px #212cff;/*dark blue*/">></span><span style="color:#40F0B0;text-shadow: 0 -1px #40F0B0, 0 1px #40F0B0/*light blue*/">></span><span style="color:#212cff;text-shadow: 0 -1px #212cff, 0 1px #212cff/*dark blue*/">></span>
 						</div>
 					</li>
 					<li id="homePageLink" class="clickableMenu"><a href="index.html">Accueil</a></li>
