upadate placeholder for unimplemented functionnality

--- a/showData.html
+++ b/showData.html
@@ -229,9 +229,9 @@
 							<div id="secondPanel" class="panel">
 								<div>
 									<div class="inlineBlockWrapper" >
-										<div><span>Rang du dernier admis : </span><span><input type="text" name="lastAdmitted" placeholder="Coming soon" onkeypress="return isNumber(event)" maxlength="6" size="6"/></span></div>
+										<div><span>Rang du dernier admis : </span><span><input type="text" name="lastAdmitted" placeholder="Pas implémenté" onkeypress="return isNumber(event)" maxlength="6" size="6"/></span></div>
 										<br/>
-										<div><span>Capacité d'accueil : </span><span><input type="text" name="capacity"placeholder="Coming soon" onkeypress="return isNumber(event)" maxlength="6" size="6"/></span></div>
+										<div><span>Capacité d'accueil : </span><span><input type="text" name="capacity"placeholder="Pas implémenté" onkeypress="return isNumber(event)" maxlength="6" size="6"/></span></div>
 									</div>
 								</div>
 							</div>
